--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Share+Tech+Mono&display=swap');
 
-
 /* General reset */
 * {
     margin: 0;
@@ -8,13 +7,25 @@
     box-sizing: border-box;
 }
 
+::-moz-selection { 
+    color: #f8f1eb;
+    background: #1a1818;
+  }
+  
+  ::selection {
+    color: #f8f1eb;
+    background: #1a1818;
+  }
+
+
 body {
-    background-color: #f8f1eb;
+    background-color: #1a1818;
     font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
 }
 
 /* Vertical Sidebar */
@@ -32,7 +43,6 @@ body {
     align-items: center;
 }
 
-/* Sidebar link with strikethrough animation */
 .sidebar a {
     position: relative;
     color: #f8f1eb;
@@ -44,23 +54,22 @@ body {
 .sidebar a::before {
     content: '';
     position: absolute;
-    width: 0%; /* Initially, no width */
+    width: 0%;
     height: 2px;
-    background-color: #ffffff; /* Color of the strikethrough */
+    background-color: #ffffff;
     top: 65%;
     left: 50%;
-    transform: translate(-50%, -50%) rotate(90deg); /* Center the line and rotate */
+    transform: translate(-50%, -50%) rotate(90deg);
     transition: width 0.3s ease-in-out;
 }
 
 .sidebar a:hover::before {
-    width: 100%; /* On hover, expand the width across the text */
+    width: 100%;
 }
 
 .sidebar a:hover {
-    color: #ffffff7e; /* Optional: change text color on hover */
+    color: #ffffff7e;
 }
-
 
 .sidebar-content {
     display: flex;
@@ -85,16 +94,29 @@ body {
 
 /* Main Container for 'About' Page */
 .about-container {
+
+    padding-left: 5%;
     text-align: center;
-    width: 80%;
-    max-width: 1200px;
+    width: 100%;
+    transform: translateY(100vh);
+    transition: transform 1s ease; 
+    left: 100px; 
+    overflow: hidden;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f8f1eb;
+    transform: translateY(100vh); 
+    
 }
 
 /* Large About Title */
 .main-title {
     font-family: 'june-expt-variable', sans-serif;
     font-variation-settings: 'STYL' 100;
-    font-size: 10vw; /* Responsive font size */
+    font-size: 10vw;
     font-weight: 700;
     color: #1a1818;
     margin-bottom: 50px;
@@ -103,14 +125,18 @@ body {
 
 /* Bottom Section */
 .bottom-section {
+    max-width: 1500px;
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
 }
 
+.right {
+    padding-top: 25px;
+}
 /* Column Styling */
 .column {
-    width: 45%; /* Takes up roughly half of the container width */
+    width: 45%;
 }
 
 /* Column Titles */
@@ -122,14 +148,12 @@ body {
     margin-bottom: 20px;
 }
 
-/* Paragraph Styling */
 .column p {
     font-size: 1.2vw;
     line-height: 1.6;
     color: #444;
 }
 
-/* Media Query for Smaller Screens */
 @media (max-width: 768px) {
     .main-title {
         font-size: 15vw;
@@ -154,26 +178,13 @@ body {
     }
 }
 
-.right {
-    padding-top: 30px;
-}
-
-/* Bottom Section */
-.bottom-section {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-}
-
-/* Adjust button container style */
 .button-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px; 
+    margin-top: 50px;
 }
 
-/* Button Styles */
 .button {
     font-family: 'june-expt-variable', sans-serif;
     font-variation-settings: 'STYL' 50;
@@ -182,20 +193,26 @@ body {
     font-size: 1.2rem;
     color: #f8f1eb;
     background-color: #1a1818;
-    border-radius: 50px; /* Rounded corners */
+    border-radius: 50px;
     text-decoration: none;
     text-align: center;
     transition: all 0.3s ease-in-out;
-    border: 2px solid transparent; /* Smooth hover effect */
-    letter-spacing: 0.1em; /* Slight letter spacing */
+    border: 2px solid transparent;
+    letter-spacing: 0.1em;
     width: 200px;
     height: 50px;
 }
 
-/* Hover Effect */
 .button:hover {
     font-size: 1.5rem;
     padding: 15px 35px;
-    background-color: #333; /* Slightly darker background on hover */
-    border-color: #f8f1eb; /* White border on hover */
+    background-color: #333;
+    border-color: #f8f1eb;
+}
+
+/* Masquer l'animation sur les écrans de moins de 1024px */
+@media (max-width: 1024px) {
+    .character, .platform {
+        display: none;
+    }
 }
