--- a/css/workspages.css
+++ b/css/workspages.css
@@ -256,3 +256,12 @@ body {
         opacity: 1;
     }
 }
+
+video {
+    margin-top: -75px;
+    margin-bottom: 75px;
+    padding-left: 10%;
+    width: 90%;
+    height: 100%;
+    object-fit: cover;
+}
