Changements sur les projets.

--- a/css/work.css
+++ b/css/work.css
@@ -31,7 +31,7 @@ body {
 
 /* Vertical Sidebar */
 .sidebar {
-    font-family: "Share Tech Mono", monospace;
+    font-family: "Poppins", monospace;
     font-size: 200;
     position: fixed;
     left: 0;
