--- a/css/contact.css
+++ b/css/contact.css
@@ -37,36 +37,35 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100%;
-    transform: translateY(200%);
+    width: 100vw;
+    transform: translateY(200vh);
     transition: all 1s ease;
 }
 
 .content {
-    max-width: 800px;
+    max-width: 40vw;
 }
 
 h1.hello {
-    font-size: 12vw; /* Large responsive font size */
+    font-size: 12vw;
     font-weight: normal;
     letter-spacing: -0.05em;
 }
 
 h1.hello span {
-    color: #f5f5f5; /* Slightly different color for dot */
+    color: #f5f5f5; 
 }
 
 .subtext {
     font-family: "Montserrat", sans-serif;
     font-size: 1.2vw;
-    margin: 20px 0;
-    font-weight: 300;
+    margin: 1vw 0;
     color: #d4d4d4;
 }
 
 .contact p {
     font-family: "Montserrat", sans-serif;
-    margin: 10px 0;
+    margin: 0.5vw 0;
     font-size: 1vw;
     color: #d4d4d4;
 }
@@ -75,7 +74,7 @@ h1.hello span {
     font-family: "Montserrat", sans-serif;
     color: #f5f5f5;
     text-decoration: none;
-    border-bottom: 1px solid transparent;
+    border-bottom: 0.5vh solid transparent;
     transition: border-color 0.3s ease;
 }
 
@@ -88,14 +87,13 @@ h1.hello span {
     left: 0;
     top: 0;
     bottom: 0;
-    width: 100px;
+    width: 5vw;
     background-color: #1a1818;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* Sidebar link with strikethrough animation */
 .sidebar a {
     position: relative;
     color: #f8f1eb;
@@ -107,23 +105,22 @@ h1.hello span {
 .sidebar a::before {
     content: '';
     position: absolute;
-    width: 0%; /* Initially, no width */
+    width: 0%;
     height: 2px;
-    background-color: #ffffff; /* Color of the strikethrough */
+    background-color: #ffffff;
     top: 65%;
     left: 50%;
-    transform: translate(-50%, -50%) rotate(90deg); /* Center the line and rotate */
+    transform: translate(-50%, -50%) rotate(90deg);
     transition: width 0.3s ease-in-out;
 }
 
 .sidebar a:hover::before {
-    width: 100%; /* On hover, expand the width across the text */
+    width: 100%;
 }
 
 .sidebar a:hover {
-    color: #ffffff7e; /* Optional: change text color on hover */
+    color: #ffffff7e;
 }
-
 
 .sidebar-content {
     display: flex;
@@ -135,13 +132,66 @@ h1.hello span {
 .vertical-text {
     transform: rotate(-90deg);
     text-transform: uppercase;
-    letter-spacing: 5px;
+    letter-spacing: 0.3vw;
 }
 
 .divider {
-    width: 1px;
-    height: 200px;
-    background-color: #f8f1eb;
+    width: 0.1vw;
+    height: 20vh;
+    background-color: #fff;
     border: none;
-    margin: 200px 0;
+    margin: 20vh 0;
+}
+
+@media (min-width: 1960px) {
+    .divider {
+        margin: 10vh;
+    }
+
+    .container {
+        align-items: center;
+        display:flexbox;
+        max-width: 50vw;
+        max-height: 70vh;
+    }
+
+    .subtext {
+        max-width: 40vw;
+    }
+    
+    h1.hello {
+        font-size: 8vw;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    h1.hello {
+        font-size: 15vw;
+    }
+
+    .subtext {
+        margin-top: 10vh;
+        width: 100vw;
+        padding-right: 50vw;
+        font-size: 3.5vw;
+        margin-bottom: 10vh;
+    }
+
+    .contact p {
+        padding-left: 5vw;
+        font-size: 3vw;
+    }
+
+    .contact a {
+        font-size: 3vw;
+    }
+
+    .sidebar {
+        width: 12vw;
+    }
 }
