--- a/css/index.css
+++ b/css/index.css
@@ -29,12 +29,11 @@ body {
 /* Vertical Sidebar */
 .sidebar {
     font-family: "Share Tech Mono", monospace;
-    font-size: 200;
     position: fixed;
     left: 0;
     top: 0;
     bottom: 0;
-    width: 100px;
+    width: 5vw;
     background-color: #1a1818;
     display: flex;
     justify-content: center;
@@ -51,38 +50,39 @@ body {
 .vertical-text {
     transform: rotate(-90deg);
     text-transform: uppercase;
-    letter-spacing: 5px;
+    letter-spacing: 0.3vw;
 }
 
 .divider {
-    width: 1px;
-    height: 200px;
+    width: 0.1vw;
+    height: 20vh;
     background-color: #fff;
     border: none;
-    margin: 200px 0;
+    margin: 20vh 0;
 }
 
 .container {
-    padding-left: 100px;
+    
+    padding-left: 7vw;
     background-color: #f8f1eb;
     display: flex;
     justify-content: space-between;
-    align-items: center; 
-    width: 100%;   
+    align-items: center;
+    width: 100vw;   
     height: 100vh; 
-    transform: translateY(-100%);
+    transform: translateY(-100vw);
     transition: all 1s ease;
 }
 
 .navigation {
-    padding-left: 300px;
-    padding-top: 50px;
+    padding-left: 12vw;
+    padding-top: 5vh;
     display: flex;
     flex-direction: column;
     justify-content: center; 
     text-align: center;
     font-size: 12vw; 
-    line-height: 1.2;
+    line-height: 28vh;
     text-transform: uppercase;
 }
 
@@ -98,36 +98,34 @@ body {
     color: #555;
 }
 
-
-
-
 .info {
-    padding-right: 100px;
-    text-align: left;
+    padding-right: 12vw;
 }
 
 .name {
     font-family: "june-expt-variable", sans-serif;
     font-weight: 600;
-    font-size: 1.5vw;
-    margin-bottom: 10px;
+    font-size: 3vw;
+    margin-bottom: 1vh;
 }
 
 .details {
-    font-size: 1.1vw;
-    margin-bottom: 10px;
-    max-width: 400px;
-    color: #444;
+    font-size: 1.5vw;
+    margin-bottom: 1vh;
+    color: #1a1818;
 }
 
 .details a {
     text-decoration: underline;
     color: #000;
+    transition: color 0.3s;
 }
 
 .details a:hover {
-    color: #555;
+    color: #00000073;
+    transition: color 0.3s;
 }
+
 
 /* Le terrain (éléments de la page) */
 .platform {
@@ -138,13 +136,24 @@ body {
     
 }
 
+#littlenav {
+    margin-left: 13vw;
+    max-width: 10vw; /* Ajustez la largeur selon vos besoins */
+    display: inline-block;
+    text-align: center;
+}
+
+
+
+
+
 /* Plateformes aux bords de l'écran */
 #top-platform {
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 20px;
+    height: 2vh;
 
 }
 
@@ -153,7 +162,7 @@ body {
     bottom: 0;
     left: 0;
     width: 100vw;
-    height: 20px;
+    height: 2vh;
 
 }
 
@@ -161,7 +170,7 @@ body {
     position: fixed;
     top: 0;
     left: 8.4vh;
-    width: 20px;
+    width: 2vh;
     height: 100vh;
 
 }
@@ -170,43 +179,43 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    width: 20px;
+    width: 2vh;
     height: 100vh;
 
 }
 #info-platform {
     opacity: 0;
-    top: 44vh;
-    left: 144vh;
-    width: 27vh;
-    height: 100px;
+    top: 42vh;
+    left: 69vw;
+    width: 19vw;
+    height: 6vh;
     background-color: #ff7700;
 }
 
 #projets-platform {
     opacity: 0;
-    top: 11vh;
-    left: 45vh;
-    width: 87vh;
-    height: 190px;
+    top: 11.3vh;
+    left: 20.7vw;
+    width: 43.5vw;
+    height: 19.2vh;
     background-color: #ff8316;
 }
 
 #moi-platform {
     opacity: 0;
-    top: 39vh;
-    left: 70vh;
-    width: 38vh;
-    height: 200px;
+    top: 39.5vh;
+    left: 33.2vw;
+    width: 19.2vw;
+    height: 19vh;
     background-color: #ee6f00;
 }
 
 #contact-platform {
     opacity: 0;
-    top: 67vh;
-    left: 42vh;
-    width: 93vh;
-    height: 190px;
+    top: 67.5vh;
+    left: 21vw;
+    width: 45.4vw;
+    height: 18.9vh;
     background-color: #ff7700;
 }
 
@@ -214,19 +223,21 @@ body {
 
 /* Personnage */
 .character {
+    cursor: pointer;
+    left: 25vw;
+    top: 47vh;
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 2.5vw;
+    height: 5vh;
     background-color: #1a1818;
 }
 
 /* Section des touches de contrôle */
 .controls {
-    padding-left: 5;
     position: absolute;
-    top: 9%; /* Aligne verticalement au centre */
-    right: 2%; /* Place à gauche de la page */
-    transform: translateY(-50%); /* Centre verticalement */
+    top: 9vh; 
+    right: 2vw;
+    transform: translateY(-5vh);
     text-align: center;
     color: #f8f1eb;
     font-family: "Share Tech Mono", monospace;
@@ -235,22 +246,22 @@ body {
 /* Style pour chaque touche */
 .key {
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    margin: 2px;
+    width: 1.5vw;
+    height: 3vh;
+    margin: 0.2vh;
     background-color: #1a1818;
     color: #f8f1eb;
-    font-size: 1rem;
+    font-size: 1.5vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 5px;
+    border-radius: 0.3vw;
     font-weight: bold;
 }
 
 /* Style spécifique pour la touche Espace */
 .key.space {
-    width: 70px; /* Largeur plus grande pour ressembler à une barre d'espace */
+    width: 3.5vw; /* Largeur plus grande pour ressembler à une barre d'espace */
 }
 
 /* Alignement en croix pour ZQSD */
@@ -263,9 +274,150 @@ body {
 .controls p {
     font-family: "june-expt-variable", sans-serif;
     font-variation-settings: 'STYL' 0;
-    font-size: 0.9rem;
-    margin-top: 10px;
     color: #1a1818;
     font-weight: 500;
 }
 
+/* Ajustement de l'espacement pour PRO JETS et CON TACT */
+.responsive-text .first-part,
+.responsive-text .second-part {
+    line-height: 0.9; /* Réduit l'espacement vertical entre les parties */
+    margin-bottom: 0.5vh; /* Ajuste l'espacement entre les mots */
+}
+
+
+
+@media (max-height: 900px) or (max-width: 1800px) {
+    .platform,
+    .character,
+    .controls {
+        display: none; 
+    }
+
+    
+}
+
+@media (min-width: 1960px) {
+    #littlenav {
+        margin-left: 5vw;
+    }
+    
+    .divider {
+        margin: 10vh;
+    }
+
+    .platform,
+    .character,
+    .controls {
+        display: none; 
+    }
+
+    .container {
+        align-items: center;
+        display:flexbox;
+        max-width: 50vw;
+        max-height: 70vh;
+    }
+    .navigation {
+        margin-left: 5vw;
+        margin-right: 5vw;
+        font-size: 5vw;
+        padding-left: 0;
+        line-height: 1.1; /* Moins d'espacement vertical */
+    }
+
+    .info {
+        text-align: center; 
+    }
+    .name{
+        font-size: 1.5vw;
+    }
+
+    .details {
+        font-size: 1vw;
+}
+}
+
+@media (max-width: 800px) {
+    #littlenav {
+        margin-left: 5vw;
+    }
+
+    .sidebar {
+        width: 10vw;
+    }
+
+    .responsive-text {
+        letter-spacing: 1px;
+    }
+
+    .navigation {
+        font-size: 15vw;
+    }
+
+    /* Casser les mots sur deux lignes */
+    .responsive-text .first-part,
+    .responsive-text .second-part {
+        display: block;
+    }
+}
+/* Entre 320px et 767px (smartphones standards) */
+@media (max-width: 475px) {
+    .sidebar {
+        width: 15vw;
+    }
+
+    /* Ajuster la disposition en colonne pour que la section info passe sous la navigation */
+    .container {
+        max-height: 100vh;
+        flex-direction: column; /* Empile la navigation et l'info verticalement */
+        align-items: center;    /* Centrer les éléments */
+    }
+
+    /* Ajustement de la navigation */
+    .navigation {
+        min-height: 60vh;
+        padding: 0;
+        padding-top: 5vh;
+        padding-left: 10vw;
+        text-align: center;
+        font-size: 20vw; /* Ajuste la taille de la navigation */
+    }
+
+    /* Ajustement de la section info */
+    .info {
+        min-height:20vh;
+        padding: 0;
+        padding-left: 10vw;
+        padding-top: 5vh;
+        max-width: 90vw; /* Ajuste la largeur de la section info */
+        text-align: center;
+    }
+
+    /* Ajustement du texte dans info */
+    .name {
+        font-size: 5vw;
+    }
+
+    .details {
+        font-size: 4vw;
+    }
+
+    .responsive-text {
+        letter-spacing: 1px;
+    }
+
+    /* Casser les mots sur deux lignes */
+    .responsive-text .first-part,
+    .responsive-text .second-part {
+        display: block;
+    }
+}
+
+@media (max-width: 375px) {
+    /* Ajustement de la navigation */
+    .navigation {
+        padding-top: 10vh;
+        font-size: 23vw; /* Ajuste la taille de la navigation */
+    }
+}
