--- a/css/about.css
+++ b/css/about.css
@@ -254,11 +254,17 @@ body {
 
 
 @media (max-width: 768px) {
+    .sidebar {
+        width: 12vw;
+    }
+
     .main-title {
+        padding-left: 8vw;
         font-size: 15vw;
     }
 
     .bottom-section {
+        padding-left: 5vw;
         flex-direction: column;
         align-items: center;
     }
@@ -278,8 +284,8 @@ body {
 
     .button {
         
-        padding: 1.3vw 3vh;
-        font-size: 2.9vw;
+        padding: 2.3vw 3vh;
+        font-size: 3vw;
         width: 20vw;
         height: 5vh;
     }
